<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_in"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_email"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_password"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignUpLogin"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:layout_marginEnd="2dp"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnSignInLogin"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorAccent" />

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keterangan"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>
