<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gambar1"
    tools:context=".activity.SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_name"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_password"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_confirm_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignUp"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:background="@color/colorPrimary" />
        <Button
            android:id="@+id/btnLogin"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:layout_marginStart="2dp"
            android:textColor="@color/black"
            android:background="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>
